# rodin

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  COPYING  README.md  _advect_8cpp.html  _density_optimization_2_temperature_minimization_8cpp-example.html  _geometry_8h.html  _mesh_8h.html  _neumann_b_c_8h.html  _shape_optimization_2_level_set_cantilever2_d_8cpp-example.html  _shape_optimization_2_level_set_cantilever_8cpp-example.html  _shape_optimization_2_simple_cantilever2_d_8cpp-example.html  _shape_optimization_2_simple_cantilever_8cpp-example.html  _variational_2_elasticity_8cpp-example.html  _variational_2_poisson_8cpp-example.html  _variational_2_simple_cantilever_8cpp-example.html  _variational_2_surface_meshes_8cpp-example.html  _variational_8h.html  annotated.html  citelist.html  class_rodin_1_1_a_d_l_caster_3_01_external_1_1_m_m_g_1_1_scalar_solution2_d_00_01_variational_1_fb829ce3868f90ff00fdc4484be48358.html  class_rodin_1_1_a_d_l_caster_3_01_external_1_1_m_m_g_1_1_scalar_solution3_d_00_01_variational_1_1e47540644e6b0c30b9be8974e3e8afe.html  class_rodin_1_1_a_d_l_caster_3_01_external_1_1_m_m_g_1_1_scalar_solution_s_00_01_variational_1_1766a4da0d1b6c61c276eefd44ab12f19.html  class_rodin_1_1_a_d_l_caster_3_01_variational_1_1_grid_function_3_01_f_e_c_00_01_traits_1_1_seri48ef502a0ed3ae625ec006c225e7e400.html  class_rodin_1_1_a_d_l_caster_3_01_variational_1_1_grid_function_3_01_f_e_c_00_01_traits_1_1_seridd0ba4b84116460aeb6cadec8106c00c.html  class_rodin_1_1_alert_1_1_alert.html  class_rodin_1_1_alert_1_1_exception.html  class_rodin_1_1_alert_1_1_warning.html  class_rodin_1_1_boundary_element.html  class_rodin_1_1_boundary_element_view.html  class_rodin_1_1_cast.html  class_rodin_1_1_cast_3_01_external_1_1_m_m_g_1_1_scalar_solution2_d_3_01_has_mesh_01_4_01_4.html  class_rodin_1_1_cast_3_01_from_00_01false_01_4.html  class_rodin_1_1_cast_3_01_from_00_01true_01_4.html  class_rodin_1_1_cast_3_01_variational_1_1_grid_function_3_01_f_e_c_01_4_01_4.html  class_rodin_1_1_core_1_1_geometry_1_1_circle.html  class_rodin_1_1_core_1_1_geometry_1_1_line2_d.html  class_rodin_1_1_element.html  (+405 more)
doc/: CMakeLists.txt  Credits.dox  Doxygen.in  Doxygen.mcss.in  ExamplesIndex.dox  GuidesIndex.dox  Mainpage.dox  Namespaces.dox  Notation.dox  README.md  References.bib  Test.dox  conf.py.in  requirements.txt  rodin.css
doc/Examples/: DensityOptimizationIndex.dox  MMGIndex.dox  PDEsIndex.dox  ShapeOptimizationIndex.dox  VariationalIndex.dox
doc/Examples/DensityOptimization/: TemperatureMinimization.dox
doc/Examples/MMG/: Casting.dox  MeshAdaptation.dox  MeshOptimization.dox  SimpleIO.dox
doc/Examples/PDEs/: Elasticity.dox  Poisson.dox  SurfaceMeshes.dox
doc/Examples/ShapeOptimization/: LevelSetCantilever.dox  SimpleCantilever.dox
doc/Guides/: Connectivity.dox  Meshes.dox  Polytopes.dox
doc/Images/: Axis.afdesign  UnitTriangle.afdesign
examples/: CMakeLists.txt
examples/Alert/: CMakeLists.txt  Colors.cpp
examples/BoundaryOptimization/: AcousticCloaking.cpp  BoundaryHeatConductivity.cpp  CMakeLists.txt  CathodeAnode.cpp  ClampLocator.cpp  ClampingLocator.cpp  CoolingMaterial.cpp  EMM.cpp  StructureReinforcement.cpp  Tools.h  WaterTank.cpp  WaterTankSupport.cpp  WaveConcealing.cpp
examples/Context/: BoostMPIBroadcast.cpp  BoostMPITest.cpp  CMakeLists.txt
examples/DG/: CMakeLists.txt  Poisson.cpp
examples/DensityOptimization/: CMakeLists.txt  TemperatureMinimization.cpp
examples/Geometry/: CCL.cpp  CMakeLists.txt  Connectivity.cpp  Displace.cpp  Skin.cpp  Skinning.cpp  Square.cpp  SubMeshExtraction.cpp  Trace.cpp  Trim.cpp  Trimming.cpp  UniformGrid.cpp  UniformRefinement.cpp  Volume.cpp
examples/Gmsh/: CMakeLists.txt  IO.cpp
examples/IO/: CMakeLists.txt  Gmsh.cpp  MFEM.cpp  Medit.cpp
examples/IntegralEquations/: CMakeLists.txt  ElasticDistribution.cpp  EquilibriumDistribution.cpp  NewtonianPotential.cpp
examples/MMG/: CMakeLists.txt  CastGridFunction.cpp  CastMMGMesh2D.cpp  CastMesh.cpp  CastRodinMesh2D.cpp  CastScalarSolution2D.cpp  DomainDiscretization.cpp  DomainDistancing.cpp  GridFunctionIO.cpp  ImplicitDomain.cpp  MeshGradation.cpp  MeshIO.cpp  MeshOptimization.cpp
examples/Mesh/: Builder.cpp  CCL.cpp  CMakeLists.txt  Skinning.cpp  SubMeshExtraction.cpp  Trimming.cpp
examples/Misc/: CMakeLists.txt
examples/Models/: CMakeLists.txt
examples/PDEs/: CMakeLists.txt  Darcy.cpp  Elasticity.cpp  Helmholtz.cpp  Multiphysics.cpp  Periodic.cpp  Poisson.cpp  SurfaceMesh.cpp
examples/Parallel/: CMakeLists.txt  ParallelMesh.cpp
examples/Plot/: CMakeLists.txt  LinePlot.cpp
examples/QF/: CMakeLists.txt  GrundmannMoller.cpp
examples/ShapeOptimization/: CMakeLists.txt  LevelSetArch2D.cpp  LevelSetBridge2D.cpp  LevelSetCantilever.cpp  LevelSetCantilever2D.cpp  LevelSetCantilever3D.cpp  LevelSetEigenvalue2D.cpp  LevelSetMast2D.cpp  SimpleCantilever.cpp  SimpleCantilever2D.cpp
examples/SurfaceEvolution/: CMakeLists.txt  FirePropagation.cpp
examples/SurfaceOptimization/: CMakeLists.txt  CathodeAnode.cpp  CoNormalAdvection.cpp  ConormalAdvection.cpp  DirichletRegion.cpp  HeatConduction.cpp  NeumannRegion.cpp  \
examples/Variational/: BooleanFunction.cpp  CMakeLists.txt  Compliance.cpp  DGPoisson.cpp  Elasticity.cpp  L2GridFunction.cpp  LevelSetCantilever.cpp  Normal.cpp  Poisson.cpp  SimpleCantilever.cpp  SurfaceMesh.cpp  SurfaceMeshes.cpp  VolumeMesh.cpp
py/: CMakeLists.txt  rodin.cpp  type_cast.h
src/Rodin/: Alert.h  Array.h  CMakeLists.txt  Cast.h  Common.h  Configure.h  Configure.h.in  Context.h  Copyable.h  Core.h  DefaultCasts.h  FlatSet.h  FormLanguage.h  ForwardDecls.h  Geometry.h  IO.h  Math.h  Mesh.cpp  Mesh.h  Moveable.h  Pair.h  Parallel.h  Plot.h  QF.h  Solver.h  Test.h  Threads.h  Traits.h  Tuple.h  Types.h  Utility.h  Variational.h
tests/: CMakeLists.txt  README.md
tests/Variational/: CMakeLists.txt  MyTest.cpp
tests/benchmarks/: CMakeLists.txt  Connectivity.cpp  MeshIO.cpp  P1.cpp  P1GridFunctionProjection.cpp  Poisson.cpp  UniformGrid.cpp
tests/manufactured/: CMakeLists.txt
tests/unit/: CMakeLists.txt  MyTest.cpp
(+2279 files in other folders)
