if (RODIN_BUILD_EXAMPLES)
  rodin_add_compile_options(LANG C CXX OPTIONS -Wno-old-style-cast -Wno-unused-parameter)

  add_subdirectory(IO)
  if (RODIN_WITH_PLOT)
    add_subdirectory(Plot)
  endif()
  add_subdirectory(Alert)
  add_subdirectory(Geometry)
  add_subdirectory(Variational)

  add_subdirectory(QF)
  add_subdirectory(PDEs)
  add_subdirectory(ShapeOptimization)
  add_subdirectory(DensityOptimization)
  add_subdirectory(SurfaceOptimization)
  add_subdirectory(SurfaceEvolution)
  add_subdirectory(Misc)

  add_subdirectory(MMG)
endif()
